--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 MONGO_URI=mongodb+srv://johan:johan@cluster0.tkdgs3m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=frase-secreta
+
+# Firebase Admin SDK Configuration
+# Ve a Firebase Console -> Configuración del proyecto -> Cuentas de servicio -> Generar nueva clave privada
+# Abre el archivo JSON descargado y copia los valores aquí:
+FIREBASE_PROJECT_ID=restaurante-24114
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=
