imagenes con mandoa

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ JWT_SECRET=frase-secreta
 FIREBASE_PROJECT_ID=restaurante-24114
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_PRIVATE_KEY=
+
+# Cloudinary - Credenciales de Mandao
+CLOUDINARY_CLOUD_NAME=dgg8tdxzu
+CLOUDINARY_API_KEY=753673315893392
+CLOUDINARY_API_SECRET=-OkdAQ_U2bACeY7DBkfhPpBDagI
